--- a/index.html
+++ b/index.html
@@ -183,4 +183,4 @@
 
     <!-- 底部的可点击图片 -->
     <div class="image-link fade-in">
-        <img src="https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEMgNxpOvkbwYbn3qMs5swq9wxgYCKtLgADJQACbfXYVWB1DmetYZBcNgQ.jpeg" alt="点击访问" onclick="window.open('http://cyxx2.pmlcultureforstreaming.top/yxzhibo.php?_wv=9983&#/liveshow?ic=ertgrvjf&openid=s59s12XTKmb-jIth2Xr2R')">
+        <img src="https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEMgNxpOvkbwYbn3qMs5swq9wxgYCK
