--- a/index.html
+++ b/index.html
@@ -8,109 +8,93 @@
         /* 设置 html 和 body 的高度为100%，并确保最小高度为视口高度 */
         html, body {
             height: 100%;
-            margin: 0;
-            padding: 0;
-            overflow: hidden; /* 防止背景溢出 */
-        }
-
-        /* 背景图固定不动，背景始终覆盖屏幕 */
-        .background {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-image: url('https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEMebdpOoawP_DIKwZP6fDwES9FAdMxSwACyBwAAm312FXpz9LDj1NinzYE.jpeg');
-            background-size: cover;
-            background-position: center;
-            z-index: -1;
+            margin: 0; /* 去除默认的页边距 */
         }
 
         body {
             font-family: Arial, sans-serif;
             text-align: center;
+            padding: 0;
             color: white;
+            min-height: 100vh; /* 保证内容区域始终覆盖整个视口高度 */
             display: flex;
             flex-direction: column;
-            justify-content: flex-start;
-            align-items: center;
-            min-height: 100vh;
+            justify-content: flex-start; /* 内容从顶部开始排列 */
+            align-items: center;  /* 居中内容 */
         }
 
         h1 {
             color: #fff;
-            margin-top: 10px;
-            font-size: 36px;
-            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+            margin-top: 10px; /* 减少顶部间距，文字和按钮更接近 */
+            font-size: 36px; /* 调整为三分之一 */
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6); /* 为标题加上阴影效果 */
         }
 
         .button-container {
             display: flex;
             flex-direction: column;
             gap: 20px;
-            width: 100%;
-            max-width: 400px;
-            margin-top: 30px;
+            width: 100%;  /* 使按钮容器宽度为100% */
+            max-width: 400px; /* 设置按钮容器的最大宽度，避免按钮过大 */
+            margin-top: 30px; /* 减少按钮与标题的间距 */
+            margin-bottom: 20px; /* 增加底部间距，避免按钮与屏幕底部太近 */
         }
 
         .button {
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+            justify-content: space-between; /* 使文字和GO按钮两侧分开 */
+            align-items: center; /* 垂直居中 */
             color: white;
-            padding: 15px 0;
-            width: 80%;
-            max-width: 100%;
+            padding: 15px 0; /* 增加按钮高度 */
+            width: 80%; /* 让按钮宽度为容器的80% */
+            max-width: 100%; /* 按钮最大宽度为容器宽度的100% */
             margin: 0 auto;
-            text-align: left;
-            font-size: 20px;
-            border-radius: 12px;
+            text-align: left; /* 让文字左对齐 */
+            font-size: 20px; /* 增大按钮字体 */
+            border-radius: 12px; /* 增加按钮圆角，显得更柔和 */
             transition: background-color 0.3s ease, opacity 0.3s ease;
-            opacity: 0.9;
-            user-select: none;
+            opacity: 0.9; /* 设置默认的透明度 */
+            user-select: none; /* 禁止文本选择 */
             cursor: pointer;
-            box-sizing: border-box;
-            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
-            padding-left: 20px;
-            padding-right: 20px;
+            box-sizing: border-box; /* 确保内外边距计算正确 */
+            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6); /* 为按钮文字加上阴影 */
+            padding-left: 20px; /* 为文字和按钮左边增加一点间距 */
+            padding-right: 20px; /* 为右侧的GO按钮加一点间距 */
         }
 
         .button:hover {
-            opacity: 1;
+            opacity: 1; /* 悬停时完全不透明 */
         }
 
-        .button1 { background-color: rgba(33, 150, 243, 0.8); }
-        .button2 { background-color: rgba(3, 169, 244, 0.8); }
-        .button3 { background-color: rgba(0, 188, 212, 0.8); }
-        .button4 { background-color: rgba(63, 81, 181, 0.8); }
-        .button5 { background-color: rgba(25, 118, 210, 0.8); }
+        /* 设置统一色调的按钮 */
+        .button1 {
+            background-color: rgba(33, 150, 243, 0.8); /* 透明的蓝色 */
+        }
+
+        .button2 {
+            background-color: rgba(3, 169, 244, 0.8); /* 透明的较浅蓝色 */
+        }
+
+        .button3 {
+            background-color: rgba(0, 188, 212, 0.8); /* 透明的海洋蓝 */
+        }
+
+        .button4 {
+            background-color: rgba(63, 81, 181, 0.8); /* 透明的深蓝色 */
+        }
+
+        .button5 {
+            background-color: rgba(25, 118, 210, 0.8); /* 透明的亮蓝色 */
+        }
 
         .go-text {
-            font-size: 14px;
-            font-style: italic;
-            letter-spacing: 1px;
-        }
-
-        /* 图片懒加载 */
-        .image-link img {
-            width: 100%;
-            max-width: 320px;
-            height: auto;
-            aspect-ratio: 2 / 1;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: transform 0.3s ease;
-            display: block;
-            margin: 20px auto; /* 图片居中 */
-        }
-
-        .image-link img:hover {
-            transform: scale(1.05);
+            font-size: 14px; /* GO 字样的字体稍微小一点 */
+            font-style: italic; /* 让 GO 字体变成斜体，增加设计感 */
+            letter-spacing: 1px; /* 适当的字间距，让它更明显 */
         }
     </style>
 </head>
 <body>
-    <div class="background"></div> <!-- 固定背景图层 -->
     <h1>永久总站</h1>
     <div class="button-container">
         <div class="button button1" data-url="http://47xxus0sn.xagqh.cn/Mr79BrK9Yh">
@@ -135,22 +119,17 @@
         </div>
     </div>
 
-    <!-- 去掉底部图片部分 -->
-    <!-- <div class="image-link">
-        <img src="https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEMgNxpOvkbwYbn3qMs5swq9wxgYCKtLgADJQACbfXYVWB1DmetYZBcNgQ.jpeg" alt="点击访问" onclick="window.open('http://cyxx2.pmlcultureforstreaming.top/yxzhibo.php?_wv=9983&#/liveshow?ic=ertgrvjf&openid=s59s12XTKmb-jIth2Xr2R')">
-    </div> -->
-
     <script>
         // 禁用右键菜单
         document.addEventListener('contextmenu', function(e) {
-            e.preventDefault();
+            e.preventDefault(); // 禁用右键菜单
         });
 
         // 给每个按钮添加点击事件，触发跳转
         document.querySelectorAll('.button').forEach(function(button) {
             button.addEventListener('click', function() {
                 var url = button.getAttribute('data-url');
-                window.open(url, '_blank');
+                window.open(url, '_blank'); // 通过 JavaScript 跳转到链接
             });
         });
     </script>
