--- a/index.html
+++ b/index.html
@@ -105,42 +105,6 @@
             font-style: italic; /* 让 GO 字体变成斜体，增加设计感 */
             letter-spacing: 1px; /* 适当的字间距，让它更明显 */
         }
-
-        /* 悬浮客服按钮样式 */
-        .floating-chat {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            z-index: 1000; /* 确保按钮位于最上层 */
-        }
-
-        .chat-button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 60px; /* 按钮大小 */
-            height: 60px;
-            background-color: #FF4081; /* 按钮颜色 */
-            border-radius: 50%; /* 圆形 */
-            color: white;
-            font-size: 18px;
-            text-decoration: none;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            transition: background-color 0.3s ease;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .chat-button:hover {
-            background-color: #F50057; /* 鼠标悬停时的颜色 */
-        }
-
-        /* 可选：为按钮内文字添加样式 */
-        .chat-button span {
-            font-size: 16px;
-            font-weight: bold;
-        }
-
     </style>
 </head>
 <body>
@@ -169,13 +133,6 @@
         </div>
     </div>
 
-    <!-- 悬浮客服按钮 -->
-    <div class="floating-chat">
-        <a href="https://example.com/customer-service" target="_blank" class="chat-button">
-            <span>客服</span>
-        </a>
-    </div>
-
     <script>
         // 禁用右键菜单
         document.addEventListener('contextmenu', function(e) {
@@ -190,5 +147,20 @@
             });
         });
     </script>
+
+    <!-- Tawk.to 客服代码 -->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function() {
+            var s1 = document.createElement("script"),
+                s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/693ed8f9e13f1e197a0d91cb/default';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!-- End of Tawk.to Script -->
 </body>
 </html>
