--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
             <span>5号通道</span>
             <span class="go-text">GO></span>
         </div>
+        <div class="button button5" data-url="https://cdn.auoktalk.com/1765305207_9a98847a3077bb8d026152b20018639f?code=ufbq75">
+            <span>6号通道</span>
+            <span class="go-text">GO></span>
+        </div>
     </div>
 
     <script>
