--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
             <span>5号通道</span>
             <span class="go-text">GO></span>
         </div>
-        <div class="button button5" data-url="https://cdn.auoktalk.com/1765305207_9a98847a3077bb8d026152b20018639f?code=ufbq75">
-            <span>6号通道</span>
+        <div class="button button5" data-url="https://sharechain.qq.com/ae7eff078a99e288f08eb803b0d202a3?qq_aio_chat_type=2">
+            <span>勉费白嫖</span>
             <span class="go-text">GO></span>
         </div>
     </div>
