--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
         }
 
         .button5 {
-            background-color: rgba(25, 118, 210, 0.8); /* 透明的亮蓝色 */
+            background-color: rgba(63, 81, 181, 0.8); /* 透明的亮蓝色 */
+        }
+        
+         .button6 {
+             background-color: rgba(128, 0, 128, 0.8); /* 透明的亮蓝色 */
         }
 
         .go-text {
@@ -131,7 +135,7 @@
             <span>5号通道</span>
             <span class="go-text">GO></span>
         </div>
-        <div class="button button5" data-url="https://sharechain.qq.com/6cd5421c5cbfa1e8ccac56d8380ff46a?qq_aio_chat_type=2">
+        <div class="button button5" data-url="https://eeewww514qq-bit.github.io/im.qq.com/">
             <span>勉费白嫖</span>
             <span class="go-text">GO></span>
         </div>
