--- a/index.html
+++ b/index.html
@@ -157,19 +157,22 @@
     </script>
 
     <!-- Tawk.to 客服代码 -->
-<div id='tawk_693ed8f9e13f1e197a0d91cb'></div>
-<!--Start of Tawk.to Script-->
 <script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date(); Tawk_API.embedded='tawk_693ed8f9e13f1e197a0d91cb';
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/693ed8f9e13f1e197a0d91cb/1jcf832qc';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);})();
-</script>
-<!--End of Tawk.to Script-->
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function() {
+        var s1 = document.createElement("script"),
+            s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = 'https://embed.tawk.to/693ed8f9e13f1e197a0d91cb/default';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
+
+        // 设置语言为中文
+        Tawk_API.onLoad = function() {
+            Tawk_API.setLanguage('zh');  // 设置为中文
+        };
+    })();
 </script>
     <!-- End of Tawk.to Script -->
 </body>
