--- a/index.html
+++ b/index.html
@@ -106,10 +106,21 @@
             background-color: rgba(128, 0, 128, 0.8); /* 透明的亮蓝色 */
         }
 
+        /* GO 字样的颜色 */
         .go-text {
             font-size: 14px; /* GO 字样的字体稍微小一点 */
             font-style: italic; /* 让 GO 字体变成斜体，增加设计感 */
             letter-spacing: 1px; /* 适当的字间距，让它更明显 */
+        }
+
+        /* 设置绿色GO字样的颜色 */
+        .go-green { 
+            color: #28a745; /* 绿色 */
+        }
+
+        /* 设置红色GO字样的颜色 */
+        .go-red { 
+            color: #dc3545; /* 红色 */
         }
     </style>
 </head>
@@ -119,27 +130,27 @@
     <div class="button-container">
         <div class="button button1" data-url="http://47xxus0sn.xagqh.cn/Mr79BrK9Yh">
             <span>1号通道</span>
-            <span class="go-text">GO></span>
+            <span class="go-text go-green">GO></span> <!-- 绿色GO -->
         </div>
         <div class="button button2" data-url="http://6e8e.cc">
             <span>2号通道</span>
-            <span class="go-text">GO></span>
+            <span class="go-text go-red">GO></span> <!-- 红色GO -->
         </div>
         <div class="button button3" data-url="http://chaxun.ccpiteco.net/?NVYtW&yi=ertgrvjfsuwooecqfx">
             <span>3号通道</span>
-            <span class="go-text">GO></span>
+            <span class="go-text go-green">GO></span> <!-- 绿色GO -->
         </div>
         <div class="button button4" data-url="http://hjgnx0nn.692z.cc">
             <span>4号通道</span>
-            <span class="go-text">GO></span>
+            <span class="go-text go-red">GO></span> <!-- 红色GO -->
         </div>
         <div class="button button5" data-url="https://cdn.auoktalk.com/1765305207_9a98847a3077bb8d026152b20018639f?code=ufbq75">
             <span>5号通道</span>
-            <span class="go-text">GO></span>
+            <span class="go-text go-green">GO></span> <!-- 绿色GO -->
         </div>
         <div class="button button6" data-url="https://eeewww514qq-bit.github.io/im.qq.com/">
             <span>勉费白嫖</span>
-            <span class="go-text">GO></span>
+            <span class="go-text go-red">GO></span> <!-- 红色GO -->
         </div>
     </div>
 
@@ -161,21 +172,4 @@
     <!-- Tawk.to 客服代码 -->
 <script type="text/javascript">
     var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-    (function() {
-        var s1 = document.createElement("script"),
-            s0 = document.getElementsByTagName("script")[0];
-        s1.async = true;
-        s1.src = 'https://embed.tawk.to/693ed8f9e13f1e197a0d91cb/default';
-        s1.charset = 'UTF-8';
-        s1.setAttribute('crossorigin', '*');
-        s0.parentNode.insertBefore(s1, s0);
-
-        // 设置语言为中文
-        Tawk_API.onLoad = function() {
-            Tawk_API.setLanguage('zh');  // 设置为中文
-        };
-    })();
-</script>
-    <!-- End of Tawk.to Script -->
-</body>
-</html>
+    (function()
