--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     // QQ 群跳转（修改群号即可）
     document.getElementById('qqGroupBtn').onclick = function () {
         window.open(
-            'https://www.930.mom',
+            'www.930.mom',
             '_blank'
         );
     };
