--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <div class="background"></div>
 
 <h1>永久总站</h1>
-<p class="sub-text">遇到打不开的情况更换浏览器访问本站即可解决，每个通道各有特色，点击进入体验精彩内容！</p>
+<p class="sub-text">遇到通道打不开的情况更换浏览器访问本站即可解决，每个都不一样各有特色！</p>
 
 <div class="button-container">
     <div class="button button1" data-url="http://47xxus0sn.xagqh.cn/Mr79BrK9Yh"><span>1号通道</span><span class="go-text go-green">GO></span></div>
