--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
 <p class="sub-text">遇到通道打不开的情况更换浏览器访问本站即可解决，每个都不一样各有特色！</p>
 
 <div class="button-container">
-    <div class="button button1" data-url="http://47xxus0sn.xagqh.cn/Mr79BrK9Yh"><span>1号通道</span><span class="go-text go-green">GO></span></div>
-    <div class="button button2" data-url="http://6e8e.cc"><span>2号通道</span><span class="go-text go-green">GO></span></div>
-    <div class="button button3" data-url="http://chaxun.ccpiteco.net/?NVYtW&yi=ertgrvjfsuwooecqfx"><span>3号通道</span><span class="go-text go-green">GO></span></div>
-    <div class="button button4" data-url="http://hjgnx0nn.692z.cc"><span>4号通道</span><span class="go-text go-green">GO></span></div>
-    <div class="button button5" data-url="https://cdn.auoktalk.com/1765305207_9a98847a3077bb8d026152b20018639f?code=ufbq75"><span>5号通道</span><span class="go-text go-green">GO></span></div>
-    <div class="button button6" data-url="https://eeewww514qq-bit.github.io/im.qq.com/"><span>勉费白嫖</span><span class="go-text go-green">GO></span></div>
+    <div class="button button1" data-url="http://6e8e.cc"><span>2号通道</span><span class="go-text go-green">GO></span></div>
+    <div class="button button2" data-url="http://47xxus0sn.xagqh.cn/Mr79BrK9Yh"><span>1号通道</span><span class="go-text go-green">GO></span></div>
+    <div class="button button3" data-url="http://hjgnx0nn.692z.cc"><span>4号通道</span><span class="go-text go-green">GO></span></div>
+    <div class="button button4" data-url="http://chaxun.ccpiteco.net/?NVYtW&yi=ertgrvjfsuwooecqfx"><span>3号通道</span><span class="go-text go-green">GO></span></div>
+    <div class="button button5" data-url="https://eeewww514qq-bit.github.io/im.qq.com"><span>勉费白嫖</span><span class="go-text go-green">GO></span></div>
+    <div class="button button6" data-url="https://cdn.auoktalk.com/1765305207_9a98847a3077bb8d026152b20018639f?code=ufbq75"><span>5号通道 </span><span class="go-text go-green">GO></span></div>
 </div>
 
 <!-- 左下角 QQ 群按钮 -->
