--- a/index.html
+++ b/index.html
@@ -97,33 +97,52 @@
         }
 
         /* ===== 左下角 QQ 群按钮（文字版，适合手机） ===== */
-.qq-group-btn {
-    position: fixed;
-    left: 20px;
-    bottom: 20px;
-    width: 60px;
-    height: 60px;
-    background-color: #12B7F5;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    z-index: 9999;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.4);
-    transition: transform 0.2s ease, opacity 0.2s ease;
+        .qq-group-btn {
+            position: fixed;
+            left: 20px;
+            bottom: 20px;
+            width: 60px;
+            height: 60px;
+            background-color: #12B7F5;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            z-index: 9999;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+            transition: transform 0.2s ease, opacity 0.2s ease;
 
-    /* 文字样式 */
-    color: #fff;
-    font-size: 16px;
-    font-weight: bold;
-    letter-spacing: 1px;
-}
+            color: #fff;
+            font-size: 16px;
+            font-weight: bold;
+            letter-spacing: 1px;
+        }
 
-.qq-group-btn:hover {
-    transform: scale(1.05);
-    opacity: 0.95;
-}
+        .qq-group-btn:hover {
+            transform: scale(1.05);
+            opacity: 0.95;
+        }
+
+        /* ===== 新增：顶部可输入文本样式（不影响其它布局） ===== */
+        .editable-text {
+            margin-top: 10px;
+            margin-bottom: 10px;
+            width: 80%;
+            max-width: 600px;
+            padding: 8px 12px;
+            font-size: 16px;
+            border-radius: 8px;
+            border: none;
+            outline: none;
+            text-align: center;
+            background: rgba(0, 0, 0, 0.45);
+            color: #fff;
+        }
+
+        .editable-text::placeholder {
+            color: rgba(255, 255, 255, 0.6);
+        }
     </style>
 </head>
 <body>
@@ -131,7 +150,15 @@
 <div class="background"></div>
 
 <h1>永久总站</h1>
-<p class="sub-text">遇到通道打不开的情况更换浏览器访问本站即可解决，每个都不一样各有特色！</p>
+
+<!-- 新增：可输入文本区域（仅此处） -->
+<input
+    type="text"
+    class="editable-text"
+    placeholder="在这里输入内容…"
+/>
+
+<p class="sub-text">遇到通道打不开的情况更换浏览器访问本站即可，推介使用QQ浏览器！</p>
 
 <div class="button-container">
     <div class="button button1" data-url="http://6e8e.cc"><span>2号通道</span><span class="go-text go-green">GO></span></div>
@@ -142,7 +169,6 @@
     <div class="button button6" data-url="https://cdn.auoktalk.com/1765305207_9a98847a3077bb8d026152b20018639f?code=ufbq75"><span>5号通道 </span><span class="go-text go-green">GO></span></div>
 </div>
 
-<!-- 左下角 QQ 群按钮 -->
 <div class="qq-group-btn" id="qqGroupBtn" title="加入QQ群">
     QQ群
 </div>
@@ -154,7 +180,6 @@
         btn.onclick = () => window.open(btn.dataset.url, '_blank');
     });
 
-    // QQ 群跳转（修改群号即可）
     document.getElementById('qqGroupBtn').onclick = function () {
         window.open(
             'http://www.930.mom',
@@ -163,7 +188,6 @@
     };
 </script>
 
-<!-- Tawk.to 客服代码（原样保留） -->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
