--- a/index.html
+++ b/index.html
@@ -137,9 +137,10 @@
 <div class="background"></div>
 
 <h1>永久总站</h1>
-<p class="top-small-text">这里是一行小字</p>
+<p class="top-small-text">
+主用111ccc.cc  备用333ccc.cc</p>
 
-<p class="sub-text">遇到通道打不开的情况更换浏览器访问本站即可，推介使用QQ浏览器！</p>
+<p class="sub-text">遇到通道打不开的情况更换浏览器访问本站即可<br>推荐使用QQ浏览器！</p>
 
 <div class="button-container">
     <div class="button button1" data-url="http://6e8e.cc"><span>2号通道</span><span class="go-text go-green">GO></span></div>
