--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@ html, body {
         <div class="title">请选择入口</div>
         <div class="subtitle">本站仅提供跳转服务</div>
 
-        <a href="https://example.com" class="btn btn-a" target="_blank">
-            进入论坛 A
+        <a href="https://example.com" class="btn btn-a" target="https://udss3.suning.com/dtc/2025/12/ff879e3655ef4b198fab9a44bfb6b6c2.html?ldk=w7iAaFIB602">
+            精品一区
         </a>
 
         <a href="https://example.org" class="btn btn-b" target="_blank">
-            进入论坛 B
+            精品二区
         </a>
     </div>
 
