--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ html, body {
             精品一区
         </a>
 
-        <a href="https://example.org" class="btn btn-b" target="_blank">
+        <a href="https://example.org" class="https://pic.huodongjia.com/postevent/2025-09-13/1757692977.17.html#/?code=adeq33" target="_blank">
             精品二区
         </a>
     </div>
