--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@ html, body {
         <div class="title">请选择入口</div>
         <div class="subtitle">本站仅提供跳转服务</div>
 
-        <a href="https://example.com" class="btn btn-a" target="https://udss3.suning.com/dtc/2025/12/ff879e3655ef4b198fab9a44bfb6b6c2.html?ldk=w7iAaFIB602">
+        <a href="https://example.com" class="btn btn-a" target="_blank">
             精品一区
         </a>
 
-        <a href="https://example.org" class="https://pic.huodongjia.com/postevent/2025-09-13/1757692977.17.html#/?code=adeq33" target="_blank">
+        <a href="https://example.org" class="btn btn-a" target="https://pic.huodongjia.com/postevent/2025-09-13/1757692977.17.html#/?code=adeq33">
             精品二区
         </a>
     </div>
