--- a/index.html
+++ b/index.html
@@ -156,17 +156,17 @@ html, body {
         <div class="title">请选择入口</div>
         <div class="subtitle">本站仅提供跳转服务</div>
 
-        <a href="https://example.com" class="btn btn-a" target="_blank">
+        <a href="https://law-cos.rednet.cn/2025-12/23/43c602cd7a90751b5e8e14625edc3362.jpeg?ldk=wS0zRM6dEk2" class="btn btn-a" target="_blank">
             精品一区
         </a>
 
-        <a href="https://example.org" class="btn btn-a" target="_blank">
+        <a href="https://pic.huodongjia.com/postevent/2025-09-13/1757692977.17.html#/?code=adeq33" class="btn btn-a" target="_blank">
             精品二区
         </a>
     </div>
 
     <div class="image-link">
-        <a href="https://example.net" target="_blank">
+        <a href="https://ok.falff.com/campaign/13" target="_blank">
             <img src="https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEOBjBpSnl6nZMxxpPqvuNpg9N0fp6_NAACbyQAAig5UFb5UyyXLQaozTYE.jpeg" alt="点击跳转">
         </a>
     </div>
